methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:9: error: expected class or object definition
def makeV(c:Color) {
^MethodsPicture:30: error: Unmatched closing brace '}' ignored here
}
^